Fix nav dropdown being behind cinny room view

--- a/src/app/organisms/navigation/Navbar.scss
+++ b/src/app/organisms/navigation/Navbar.scss
@@ -16,7 +16,7 @@
   color: #ECEFF4;
   font-size: .85rem;
   position: relative;
-  z-index: 10;
+  z-index: 1000;
   height: 3.25rem;
   line-height: normal;
   border-bottom: solid 5px #3B4252;
